# OOP

./: README.md
FruitApp/: CMakeLists.txt  Fruit.cpp  Fruit.h  FruitController.cpp  FruitController.h  FruitRepo.cpp  FruitRepo.h  FruitUi.cpp  FruitUi.h  README.md  Shop.cpp  tests.cpp
ScooterApp/: CMakeLists.txt  CMakeLists.txt.user.4f04a17  CMakeLists.txt.user.autosave  CMakeLists.txt.user.f120cc9  CSVFileRepository.cpp  CSVFileRepository.h  Controller.cpp  Controller.h  Domain.h  InMemoryRepository.cpp  InMemoryRepository.h  README.md  Repository.h  Scooter.cpp  Scooter.h  Scooters.csv  Tests.cpp  Tests.h  UI.cpp  UI.h  User.cpp  User.h  customermenu.cpp  customermenu.h  customermenu.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ownermenu.cpp  ownermenu.h  ownermenu.ui  ownermenu.ui.autosave
